Revision history for perl distribution Mojolicious-Plugin-LinkEmbedder

0.24 Not Released
 - Fix failing tests
 - blip.tv is no more

0.2301 2015-04-05T09:23:47Z
 - Need to skip t/music-spotify.t

0.23 2015-04-03T15:08:36Z
 - Fix skipping tests in t/fallback.t #20

0.22 2015-04-02T19:27:29Z
 - Fix warnings with invalid input url
 - Fix blip include parsing
 - Experiment with etag header
 - Experiment with max-age cache header
 - Add support for http://pastie.org
 - Add "error" attribute
 - Remove caching

0.21 2015-04-01T17:04:50Z
 - Add support for Spotify #19
 - Add support for http://ix.io
 - Add support for http://pastebin.com
 - Add support for http://paste.scsys.co.uk/
 - Improved Twitter links handling #17

0.20 2015-01-20T20:09:11Z
 - Add support for appear.in
 - Allow styling <iframe>s containing video

0.19 2015-01-18T17:15:33Z
 - Add support for travis-ci.org links

0.18 2015-01-15T23:08:24Z
 - Fix escaping markup when embedding HTML pages #13 This includes Github
   links
 - Will only learn meta information from HTML if response is success #14
 - Video will have controls #12
 - Twitter cards will embed media
 - Remove cache_cb attribute
 - Add caching to predefined handler Marked caching as EXPERIMENTAL

0.17 2015-01-04T16:54:01Z
 - Will not run online tests from cpantesters

0.16 2015-01-02T14:19:51Z
 - Add support for xkcd.com image embedding

0.15 2014-11-16T14:11:43Z
 - Fix test containing date
 - Skip tests that require connection to internet

0.14 2014-11-13T18:50:15Z
 - Add support for links from metacpan.org
 - More robust tests

0.13 2014-10-22T20:49:23Z
 - Fix failing video-youtube.t and -vimeo.t

0.12 2014-10-19T15:19:41Z
 - Fix reading media_id in Link::Text::HTML

0.11 2014-10-19T13:30:27Z
 - Fix Video::Dbtv iframe src
 - Fix handling https://www.youtube.com/user/jsconfeu
 - Add support for git.io links
 - Add support for github commit messages
 - Add cache capabilities
 - Remove string overload of Link objects

0.10 2014-10-17T14:07:37Z