@@ -27,15 +27,29 @@ Get or set error. Default to C<undef> on no error.
 
 =head2 etag
 
+=head2 author_name
+
+Name of the person who created the content.
+
+=head2 author_url
+
+URL to L</author_name>.
+
 =head2 media_id
 
 Returns the part of the URL identifying the media. Default is empty string.
 
 =head2 provider_name
 
-  $str = $self->provider_name;
-
 Example: "Twitter".
+
+=head2 provider_url
+
+Example L<https://twitter.com>.
+
+=head2 title
+
+Some title
 
 =head2 ua
 
@@ -47,14 +61,23 @@ Holds a L<Mojo::URL> object.
 
 =cut
 
+has author_name => '';
+has author_url  => '';
 has error => undef;
 has etag  => sub {
   eval { shift->_tx->res->headers->etag } // '';
 };
-has media_id => '';
-sub provider_name { ucfirst(shift->url->host || '') }
-has ua  => sub { die "Required in constructor" };
-has url => sub { shift->_tx->req->url };
+
+has media_id    => '';
+has provider_name => sub { ucfirst shift->url->host };
+has provider_url => sub {
+  my $self = shift;
+  return Mojo::URL->new(host => $self->url->host, scheme => $self->url->scheme);
+};
+
+has title => '';
+has ua    => sub { die "Required in constructor" };
+has url   => sub { shift->_tx->req->url };
 
 # should this be public?
 has _tx => undef;
@@ -180,15 +203,16 @@ sub TO_JSON {
 
   return {
     # oembed
-    # author_name => "",
-    # author_url => "",
     # cache_age => 86400,
     # height => $self->DEFAULT_VIDEO_HEIGHT,
     # version => '1.0', # not really 1.0...
     # width => $self->DEFAULT_VIDEO_WIDTH,
+    author_name   => $self->author_name,
+    author_url    => $self->author_url,
     html          => $self->to_embed,
     provider_name => $self->provider_name,
-    provider_url  => $url->host ? Mojo::URL->new(host => $url->host, scheme => $url->scheme || 'http') : '',
+    provider_url  => $self->provider_url,
+    title         => $self->title,
     type          => 'rich',
     url           => $url,
 
