@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-LinkEmbedder
 
 0.24 Not Released
  - Fix failing tests
+ - Add support for instagram #24
  - blip.tv is no more
 
 0.2301 2015-04-05T09:23:47Z
